geometry/project/IsInside/compiling_error.txt
/home/faraonul/Workspace/fmi/geometry/project/IsInside/main.cpp: In function ‘void handleClick(sf::RenderWindow&)’:
/home/faraonul/Workspace/fmi/geometry/project/IsInside/main.cpp:184:12: error: could not convert ‘200’ from ‘int’ to ‘sf::Time’
   sleep(200);
            ^
